force-app/main/default/objects/df_122_arvtagare_lngsta__c/df_122_arvtagare_lngsta__c.object-meta.xml
<CustomObject>
    <label>Arvtagare (längsta)</label>
    <nameField>
        <label>Arvtagare (längsta) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arvtagare (längsta)s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>