force-app/main/default/objects/df_122_arvtagare_lngsta__c/fields/arvsprocent_lngstlevande__c.field-meta.xml
<CustomField>
    <fullName>arvsprocent_lngstlevande__c</fullName>
    <label>Arvsprocent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>