force-app/main/default/objects/df_122_arvtagare_lngsta__c/fields/efternamn_lngstlevande__c.field-meta.xml
<CustomField>
    <fullName>efternamn_lngstlevande__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>