force-app/main/default/objects/df_122_arvtagare_lngsta__c/fields/frnamn_lngstlevande__c.field-meta.xml
<CustomField>
    <fullName>frnamn_lngstlevande__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>