force-app/main/default/objects/df_122_arvtagare_lngsta__c/fields/fullmaktshavare_prioritet_for_pe_251__c.field-meta.xml
<CustomField>
    <fullName>fullmaktshavare_prioritet_for_pe_251__c</fullName>
    <label>Fullmaktshavare prioritet (For p a8f37</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>