force-app/main/default/objects/df_122_arvtagare_lngsta__c/fields/fullmaktshavare_prioritet_person_252__c.field-meta.xml
<CustomField>
    <fullName>fullmaktshavare_prioritet_person_252__c</fullName>
    <label>Fullmaktshavare prioritet (For p b339d</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>