force-app/main/default/objects/df_122_arvtagare_lngsta__c/fields/ska_vre_fullmaktig_for_person_2__c.field-meta.xml
<CustomField>
    <fullName>ska_vre_fullmaktig_for_person_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska väre fullmaktig (For person  bb45a</label>
    <type>Checkbox</type>
</CustomField>